collapse centered fix

--- a/src/scss/collapse.scss
+++ b/src/scss/collapse.scss
@@ -19,21 +19,9 @@
     margin-left: -$collapse-gap;
 
     %collapse-centered & {
-      margin-left: 0;
-    }
-  }
-  &__item {
-    flex: 1 1 50%;
-    max-width: 50%;
-    margin-top: $collapse-gap;
-    padding-left: $collapse-gap;
-
-    %collapse-centered & {
-      flex: 1 1 860px;
       max-width: 860px;
       margin-left: auto;
       margin-right: auto;
-      padding-left: 0;
 
       @media ($desktop-max) and ($desktop-min) {
         max-width: 740px;
@@ -44,6 +32,18 @@
       @media ($tablet-mad) and ($tablet-min) {
         max-width: 550px;
       }
+    }
+  }
+  &__item {
+    flex: 1 1 50%;
+    max-width: 50%;
+    margin-top: $collapse-gap;
+    padding-left: $collapse-gap;
+
+    %collapse-centered & {
+      flex: 1 1 100%;
+      max-width: 100%;
+      padding-left: 0;
     }
 
     @media ($desktop-max) {
